<resources>
    <string name="app_name">Kolla</string>
    <string name="facebook_app_id">263985664006850</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="skip">Skip</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="or">OR</string>
    <string name="facebook">Facebook</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="register_here"><u>Register Here</u></string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have account?</string>
    <string name="login_here"><u>Login here</u></string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="field_required">This field is required</string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="password_not_match">Password does not match</string>
    <string name="name">Name</string>
    <string name="check_your_facebook_privacy">Facebook Registration Failed. Check your Facebook privacy.</string>
    <string name="session_expired">Your session expired. Please log in again.</string>
    <string name="your_kolla_credits">Your Kolla Credits</string>
    <string name="add_credit">Add Credit</string>
    <string name="history">History</string>
    <string name="hot_desk">Hot Desk</string>
    <string name="unknown_error_occured">Unknown Error Occurred</string>
    <string name="tap_twice_to_exit">Tap once again to exit!</string>
    <string name="cancelled_by_user">Cancelled by user</string>
    <string name="title_activity_room_list">RoomListActivity</string>
    <string name="dummy_long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Sed tellus sem, vehicula sed nulla at, laoreet lacinia sem. Morbi eu lorem magna.
        Aenean vitae gravida magna. Phasellus vulputate vel nibh quis hendrerit. \n\n
    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Sed tellus sem, vehicula sed nulla at, laoreet lacinia sem. Morbi eu lorem magna.
        Aenean vitae gravida magna. Phasellus vulputate vel nibh quis hendrerit.</string>
    <string name="dummy_short_text">Lorem ipsum dolor sit amet</string>
    <string name="full_book">Full Book</string>
    <string name="booking_detail">Booking Detail</string>
    <string name="location">Location</string>
    <string name="booking_date">Booking Date</string>
    <string name="booking_time">Booking Time</string>
    <string name="duration">Duration</string>
    <string name="guest">Guest</string>
    <string name="title_activity_room_detail">RoomDetailActivity</string>
    <string name="dummy_day_range">Monday - Friday \n10:00 – 17:00 </string>
    <string name="dummy_facility">Wi-Fi</string>
    <string name="detail">Detail</string>
    <string name="facility">Facility</string>
    <string name="map">Map</string>
    <string name="booking_this_space">Booking This Space</string>
    <string name="title_activity_other_payment">OtherPaymentActivity</string>
    <string name="payment">Payment</string>
    <string name="not_enough_kolla_point_warning_text">Your KollaPoint is not enough. Please pay with other methods</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="internet_banking">Internet Banking</string>
    <string name="credit_card">Credit Card</string>
    <string name="you_can_transfer_this_bank_and_confirm_payment_at_your_profile">You can transfer this bank and confirm payment at your profile.</string>
    <string name="pay">Pay</string>
    <string name="confirmation">Confirmation</string>
    <string name="kollacredits">KollaCredits</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>

    <string name="locations_available">"%d Locations Available"</string>
    <string name="date_builder">%1$d-%2$d-%3$d</string>
    <string name="time_builder">%1$d:%2$s</string>
    <string name="seat_available">%1$s %2$s</string>
    <string name="last_update_s">Last update %s</string>
    <string name="s_guest">%s Person</string>
    <string name="s_durations">%s Hours</string>
    <string name="s_duration">%s Hour</string>
    <string name="s_per_guest">%s/guest</string>

    <string name="dummy_date">25 August 2016</string>
    <string name="dummy_time">10:00</string>
    <string name="dummy_duration">3 hours</string>
    <string name="dummy_guest">1 person</string>
    <string name="price">Price</string>
    <string name="default_date_format">dd MMM yyyy</string>
    <string name="default_web_date_format">dd-MM-yyyy</string>
    <string name="booking_option">Booking Option</string>
    <string name="request_a_survey">Request a Survey</string>
    <string name="booking_this_hall">Booking This Hall</string>
    <string name="top_up_kolla_credit">Top Up Kolla Credit</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="booking_success">Booking Success</string>
    <string name="back_to_booking">Back to Booking</string>
    <string name="see_your_booking">See Your Booking</string>
    <string name="notification">Notification</string>
    <string name="kolla">Kolla::</string>
    <string name="news">News</string>
    <string name="booking">Booking</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>
    <string name="booking_size">Booking Size</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="booking_type">Booking Type</string>
    <string name="event_name">Event Name</string>
    <string name="your_event_name_here">Your event name here…</string>
    <string name="number_of_pax_s">Number of Pax (Max. %s)</string>
    <string name="dummy_pax">50</string>
    <string name="next">Next</string>
    <string name="payment_type">Payment Type</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="type">Type</string>
    <string name="pax">Pax</string>
    <string name="request_survey">Request Survey</string>
    <string name="full_name">Full Name</string>
    <string name="your_full_name_here">Your full name here...</string>
    <string name="survey_date">Survey Date</string>
    <string name="survey_time">Survey Time</string>
    <string name="how_big_the_office_space">How Big the Office Space?</string>
    <string name="minimum_pax_is_s">Minimum Pax is %s</string>
    <string name="office_size">Office Size</string>
    <string name="redeem_voucher">Redeem Voucher</string>
    <string name="bonus_s">Bonus: %s</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="card_number">Card Number</string>
    <string name="card_expiration">Card Expiration</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="cvv">CVV</string>
    <string name="set_dummy_data">Set Dummy Data</string>
    <string name="buy_s_kolla_credit">Buy %s Kolla Credit</string>
    <string name="success">Success</string>
    <string name="thank_you_for_payment_wording">Thank you for your payment! You now have Kolla Credit and ready to book your co-working space. Enjoy your time in Kolla Space!</string>
    <string name="see_your_history">See Your History</string>
    <string name="trx_no">Trx no.</string>
    <string name="trx_time">Transaction Time</string>
    <string name="approval_code">Approval Code</string>
    <string name="mtrx_pattern">%1$s-%2$s-%3$s</string>
    <string name="event_found_s">Event Found: %s</string>
    <string name="sold_out">Sold Out</string>
    <string name="buy_now_s">Buy Now K %s</string>
    <string name="posted_on_s">Posted on %s</string>
    <string name="s_people_already_book">%s people  already book</string>
    <string name="more">More</string>
    <string name="kolla_credit">Kolla Credit</string>
    <string name="end_date_s">End Date : %s</string>
    <string name="start_date_s">Start Date : %s</string>
    <string name="insufficient_balance">Insufficient Balance</string>
    <string name="your_detail">Your Detail</string>
    <string name="s_person_s">%1$s person - %2$s</string>
    <string name="guest_s">Guest %s</string>
    <string name="fee">Fee</string>
    <string name="back_to_event_list">Back to event list</string>
    <string name="i_book_this_event">I book this event for myself</string>
    <string name="select_guest">- Select Guest -</string>
    <string name="grant_permission_warning">This app was designed for an older version of Android. Denying permission may cause it to no longer function as intended</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">Phone Number</string>
    <string name="company">Company</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="space">Space</string>
    <string name="logout_message_confirmation">Are you sure want to log out?</string>
    <string name="booking_s">Booking (%s)</string>
    <string name="event_s">Event (%s)</string>
    <string name="following">Following</string>
    <string name="following_s">Following (%s)</string>
    <string name="view_profile">View Profile</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="booked_space">Booked Space</string>
    <string name="booked_event">Booked Event</string>
    <string name="booked_space_s">Booked Space (%s)</string>
    <string name="booked_event_s">Booked Event (%s)</string>
    <string name="default_number">0</string>
</resources>
