<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_news"
            android:icon="@drawable/ic_news"
            android:checked="true"
            android:title="@string/news" />
        <item
            android:id="@+id/action_booking"
            android:icon="@drawable/ic_booking"
            android:title="@string/booking"/>
        <item
            android:id="@+id/action_events"
            android:icon="@drawable/ic_events"
            android:title="@string/events" />
        <item
            android:id="@+id/action_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/action_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />
        <item
            android:id="@+id/action_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />
    </group>

</menu>
