<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_news"
        android:enabled="true"
        android:icon="@drawable/ic_news"
        android:title="@string/news"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_booking"
        android:enabled="true"
        android:icon="@drawable/ic_booking"
        android:title="@string/booking"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_events"
        android:enabled="true"
        android:icon="@drawable/ic_events"
        android:title="@string/events"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>