<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_bg_90">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <ImageView
            android:id="@+id/close_register_page_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@null"
            android:src="@drawable/ic_chevron_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="@dimen/large_text" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="32dp">

        <EditText
            android:id="@+id/name_register_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/form_white_border"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:lines="1"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_text"
            tools:text="@string/app_name" />

        <EditText
            android:id="@+id/email_register_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/form_white_border"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_text"
            tools:text="@string/app_name" />

        <EditText
            android:id="@+id/password_register_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/form_white_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lines="1"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_text" />

        <EditText
            android:id="@+id/password_confirmation_register_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/form_white_border"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:lines="1"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_text" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/register_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/medium_text" />
        </FrameLayout>

        <include layout="@layout/view_or_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/com_facebook_blue">

                <TextView
                    android:id="@+id/fb_register_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/facebook"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/medium_text" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/already_have_account"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login_here_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_here"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>