<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_bg_90">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="32dp"
        android:id="@+id/linearLayout">

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/form_white_border"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_text"
            tools:text="@string/app_name" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/form_white_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lines="1"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_text" />

        <TextView
            android:id="@+id/forgot_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:text="@string/forgot_password"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/login_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/medium_text" />
        </FrameLayout>

        <include layout="@layout/view_or_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/com_facebook_blue">

                <TextView
                    android:id="@+id/fb_login_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/facebook"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/medium_text" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/don_t_have_account"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/register_here_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_here"
                android:textColor="@android:color/white"
                android:textSize="@dimen/medium_text"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="19dp">

        <ImageView
            android:id="@+id/close_login_page_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@null"
            android:tint="@android:color/white"
            android:src="@drawable/ic_chevron_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/large_text" />

    </RelativeLayout>

</RelativeLayout>