<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/email_address"
            android:textSize="@dimen/medium_text" />

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_colored_text"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold"
            tools:text="satryaway@gmail.com" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/phone_number"
            android:textSize="@dimen/medium_text" />

        <TextView
            android:id="@+id/phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_colored_text"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold"
            tools:text="081222900985" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/kollacredits"
            android:textSize="@dimen/medium_text" />

        <TextView
            android:id="@+id/credit_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_colored_text"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold"
            tools:text="10.500" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/company"
            android:textSize="@dimen/medium_text" />

        <TextView
            android:id="@+id/company_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_colored_text"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold"
            tools:text="PT Jix Street" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/primary">

            <TextView
                android:id="@+id/edit_profile_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/edit_profile"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/large_text" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>